# save-slack-msg-to-notion

./: .env.example  .gitignore  README.md  pyproject.toml
save_slack_msg_to_notion/: __init__.py  generate_import_csv.py  main.py
